add user management

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URL=mongodb+srv://haze:12345@cluster0.muj7zwv.mongodb.net/hazeapp
+# MONGO_URL=mongodb://localhost:27017/hazeapp
 PORT=5001
 JWT_SECRET=ABC12345
 SMTP_EMAIL=jiozindagichanchal@gmail.com
