--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "colors": "^1.4.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "force": "^0.0.3",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
