--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+# MONGO_URL=mongodb+srv://devteam:Zil7f6BCpZMGvMcc@hazeapp.lszvuaj.mongodb.net/
+
 MONGO_URL=mongodb+srv://haze:12345@cluster0.muj7zwv.mongodb.net/hazeapp
 # MONGO_URL=mongodb://localhost:27017/hazeapp
-PORT=5001
+PORT=8080
 JWT_SECRET=ABC12345
 SMTP_EMAIL=jiozindagichanchal@gmail.com
 SMTP_PASSWORD=12345
